@@ -2,21 +2,25 @@
 \alias{fitIndices}
 \title{Compute Extra Model Fit Indices}
 \usage{
-  fitIndices(obj, prompt = TRUE)
+  fitIndices(obj, calcNull = FALSE, prompt = TRUE)
 }
 \arguments{
   \item{obj}{an estimated model object from the mirt
   package}
+
+  \item{calcNull}{logical; calculate statistics for the
+  null model as well? Allows for statistics such as the
+  limited information TLI and CFI}
 
   \item{prompt}{logical; prompt user for input if the
   internal matrices are too large?}
 }
 \description{
   Compute additional model fit indices that do not come as
-  direct results following parameter convergence. Will only
+  direct results following parameter convergence. Will
   compute the M2 (Maydeu-Olivares & Joe, 2006) statistic by
-  default, and returns a list containing the requested
-  statistics.
+  default, and returns a data.frame containing various
+  model fit statistics.
 }
 \examples{
 \dontrun{
@@ -27,7 +31,7 @@ fitIndices(mod1)
 
 #Science data, much more sparse so M2 would be more informative
 (mod2 <- mirt(Science, 1))
-fitIndices(mod2)
+fitIndices(mod2, calcNull = TRUE)
 }
 }
 \author{
